# robometrics

./: .gitattributes  LICENSE  Licenses  README.md  pyproject.toml
robometrics/: datasets.py  evaluator.py  file_structure.py  metrics.py  robometrics_types.py  robot.py  statistics.py  util_file.py
robometrics/content/dataset/: demo_set.yaml  mb_set.yaml  mpinets_set.yaml
robometrics/content/robot/: franka_spheres.yml
tests/: dataset_raw_test.py  dataset_test.py
